--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@
 
 
 
-    <div class="container" id="container">-->
+  <!--  <div class="container" id="container"
         
         <div id="slidebox">
             <div class="textinslider">
@@ -202,9 +202,9 @@
                 <li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>
             </ul>
         </div>
-    </div>
+    </div>-->
 
-
+    
 
     <div class="header_mobile">
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
@@ -300,9 +300,10 @@
 
 
 
-    <h2><span>Наши</span> партнеры</h2>
     <div class="container" id="container">
+        <div class="h23"><h2><span>Наши</span> партнеры</h2></div>
         <div id="partners">
+            
             <div class="p-next"></div>
             <div class="p-previous"></div>
 
@@ -464,7 +465,7 @@
             start: 0,
             scroll: 1,
             circular: true,
-            auto: 1000,
+            auto: 6000,
             speed: 900,                        
         });
             
