--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -168,6 +168,42 @@
 
 
 
+
+
+
+
+
+
+
+
+    <div id="sliderFrame">
+        <div id="slider">
+            
+            <a class="video" href="" data-autovideo="1">
+                <b data-src="~/Content/images/2.mp4"></b>
+            </a>
+            <a href="">
+                <img src="~/Content/images/image-slider-1.jpg" alt="" />
+            </a>
+            <a class="video" href="">
+                <b data-src="~/Content/images/image-slider-3.jpg"></b>
+            </a>
+            <a class="video" href="" data-autovideo="1">
+                <b data-src="~/Content/images/image-slider-5.jpg"></b>
+            </a>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
   <!--  <div class="container" id="container"
         
         <div id="slidebox">
@@ -391,6 +427,20 @@
         <script src="~/Scripts/comments/owl.carousel.min.js"></script>
         <script src="~/Scripts/comments/custom.js"></script>
         <!--end new scripts-->*@
+
+    <!--new scripts-->
+    <link href="~/Scripts/js-image-slider.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/mcVideoPlugin.js" type="text/javascript"></script>
+    <script src="~/Scripts/js-image-slider.js" type="text/javascript"></script>
+    <link href="~/Scripts/generic.css" rel="stylesheet" type="text/css" />
+    <!--end new scripts-->
+
+
+
+
+
+
+
 
 
 
