--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -109,7 +109,8 @@
         </div>
         <div class="feedback">
             <a href="/cart/" id="fav">Избранное</a>
-            <a href="/email/" id="blink">Обратный звонок</a>
+           <!-- <a href="/email/" id="blink">Обратный звонок</a>-->
+            <a href="/email/" id="popup__toggle" onclick="return false;"><div class="circlephone" style="transform-origin: center;"></div><div class="circle-fill" style="transform-origin: center;"></div><div class="img-circle" style="transform-origin: center;"><div class="img-circleblock" style="transform-origin: center;"></div></div></a>
         </div>
         </span>
     </div>
@@ -371,7 +372,7 @@
     <div class="footer">
         <div class="container" id="container">
             <div class="wrapper-footer">
-            <div id="toTop"></div>
+            <div id="toTop">↑</div>
             <div class="social">
                 <a href="https://www.facebook.com/rehouseodessastars/?ref=bookmarks" class="fb" target="_blank"></a>
                 <a href="https://www.youtube.com/channel/UCr_t3R1EhpY6oAWnwSSmC-A" class="yt" target="_blank"></a>
