--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -162,7 +162,7 @@
                 </ol></div>
             </div>
             <div class="sell">
-                <a href="/email/" id=""><img src="~/Content/images/tosell.png"</a>
+                <a href="/email/" id=""><div class="sell1"><p>+</p></div><div class="sell2"><p>Хочу продать</p></div></a>
             </div>
         </div>
     </div>
