--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -7,64 +7,21 @@
     {
         <div class="data-item">
             <li>
-                @if (item.IsExclusive)
-                {
-                    <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                }
-                else if (item.IsHot)
-                {
+                <a href="">
                     <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                }
-                else if (item.IsNew)
-                {
-                    <div class="redimg"><img src="~/Content/images/newred.png"></div>
-                }
-                @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
-                {
-                    if (item.Images != null && item.Images.Count > 0)
-                    {
-                        <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=250&h=212&mode=max" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
-                    }
-                    else
-                    {
-                        <a href="/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
-                    }
-                    <div class="min-content">
-                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-
-                        <h3>Продам @item.Title.RussianName.ToLower()</h3>
-                        @*<h3>@item.TitleName</h3>*@
-                        <h4>@item.Description</h4>
-                        <p class="cost">@item.Price $</p>
-                        <a href="/sale/detail/@item.Id" id="follow">❯</a>
+                    <h3>Продам дом</h3>
+                    <h4><img src="~/Content/images/pin.png" height="13" alt="" /></h4>
+                    <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
+                    <div class="meters">
+                        <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                        <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
                     </div>
-                }
-                else
-                {
-                    if (item.Images != null && item.Images.Count > 0)
-                    {
-                        <a class="fix" href="/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=250&h=212&mode=max" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
-                    }
-                    else
-                    {
-                        <a href="/rent/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
-                    }
-                    <div class="min-content">
-                        <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                        <h3>Сдам @item.Title.RussianName.ToLower()</h3>
-                        @*<h3>@item.TitleName</h3>*@
-                        <h4>@item.Description</h4>
-                        @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
-                        {
-                            <p class="cost">@item.Price грн</p>
-                        }
-                        else
-                        {
-                            <p class="cost">@item.Price $</p>
-                        }
-                        <a href="/rent/detail/@item.Id" id="follow">❯</a>
+                    <div class="bottom">
+                        <div><p class="cost">150000 $</p></div>
+                        <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                        <div class="like" onclick=""><img src="~/Content/images/star.png" height="32" alt="" /></div>
                     </div>
-                }
+                </a>
             </li>
         </div>
     }
