--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -10,7 +10,7 @@
                 <a href="">
                     <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                     <h3>Продам дом</h3>
-                    <h4><img src="~/Content/images/pin.png" height="13" alt="" /></h4>
+                    <h4><img src="~/Content/images/pin.png" height="13" alt="" /> ESrsvgs fgh fgh  fghfghfgh fdghfgh fgh dfgfh fgh fgh hgf</h4>
                     <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                     <div class="meters">
                         <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
