changes for slider video

--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -180,18 +180,13 @@
     <div id="sliderFrame">
         <div id="slider">
             
-            <a class="video" href="" data-autovideo="1">
-                <b data-src="~/Content/images/2.mp4"></b>
+            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
+                <b data-src="Content/images/image-slider-1.jpg"></b>
             </a>
-            <a href="">
-                <img src="~/Content/images/image-slider-1.jpg" alt="" />
-            </a>
-            <a class="video" href="">
-                <b data-src="~/Content/images/image-slider-3.jpg"></b>
-            </a>
-            <a class="video" href="" data-autovideo="1">
-                <b data-src="~/Content/images/image-slider-5.jpg"></b>
-            </a>
+            <a class="lazyImage" href="~/Content/images/image-slider-2.jpg">Slide 4</a>
+            <a class="lazyImage" href="~/Content/images/image-slider-3.jpg">Slide 4</a>
+            <a class="lazyImage" href="~/Content/images/image-slider-5.jpg">Slide 4</a>
+            
         </div>
     </div>
 
