--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -33,7 +33,7 @@
     width:100%;height:100%;
 }
 #slider .video {
-    background:transparent url(~/Scripts/video.png) no-repeat 50% 50%;
+    background:transparent url(video.png) no-repeat 50% 50%;
 }
 
 /* ------ built-in navigation bullets wrapper ------*/
@@ -50,7 +50,7 @@
 {
     width:11px; height:11px;
     font-size:0;color:White;/*hide the index number in the bullet element*/
-    background:transparent url(~/Scripts/bullet.png) no-repeat 0 0;
+    background:transparent url(bullet.png) no-repeat 0 0;
     display:inline-block; *display:inline; zoom:1;
     overflow:hidden;cursor:pointer;
     margin:0 6px;/* set distance between each bullet*/
