--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -962,7 +962,6 @@ opacity: .1;}}
         justify-content: space-around;
             margin-top: -137px;
     position: absolute;
-    z-index: 9999999999;
 }
 
     .news .img {
@@ -1519,7 +1518,7 @@ opacity: .1;}}
         flex-direction: row;
         color: #bcbcbc;
         font-size: 14px;
-        margin-left: 87px;
+        margin-left: 0;
     }
 
         .navigation_string .way a {
@@ -1548,25 +1547,26 @@ opacity: .1;}}
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    margin-top: 32px;
-    margin-left: 225px;
+    margin-left: 0;
     flex-wrap: wrap;
+        margin: auto;
+        margin-top: 32px;
 }
 
 .h2novostroy h2 {
-    color: #fff;
-    font-family: "Casper";
-    font-size: 24px;
+
+    margin-top: 35px;
+    margin-bottom: 9px;
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
-    margin-left: 225px;
-    margin-top: 59px;
-    width: 770px;
 }
 
 .h2prodsale h2 {
-    color: #fff;
-    font-family: "Casper";
+    color: #114a82;
+    font-family: "ProximaNova";
     font-size: 24px;
     font-weight: 700;
     text-transform: uppercase;
@@ -1580,15 +1580,15 @@ opacity: .1;}}
     appearance: none;
     -webkit-appearance: none;
     background: transparent;
-    background: url(images/select.png) no-repeat right;
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    background: url(images/select.png) no-repeat 96%;
+    color: #114a82;
+    font-family: "ProximaNova";
     font-size: 15px;
     font-weight: 700;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #fff;
-    border-top: 1px solid #fff;
+    border-bottom: 1.2px solid #114a82;
+    border-left: 1.2px solid #114a82;
+    border-top: 1.2px solid #114a82;
+    border-right: 1.2px solid #114a82;
     padding-left: 5px;
     margin-bottom: 5px;
 }
@@ -1598,30 +1598,42 @@ opacity: .1;}}
 }
 
 .selection select option {
-    background-color: #163d7d;
-    color: #fff;
-    font-family: "Century Gothic";
+    background-color: #f3f3f9;
+    color: #114a82;
+    font-family: "ProximaNova";
     font-size: 14px;
     font-weight: 700;
     text-transform: none;
+    border: 1.5px solid #114a82;
 }
 
+
 .selection select:focus {
-    color: #ffd700;
-    background: url(images/select_hover.png) no-repeat right;
+    color: #114a82;
+    background: url(images/select-h.png) no-repeat 96%;
+    color:#f9a320;
+    border-bottom: 1.2px solid #f9a320;
+    border-left: 1.2px solid #f9a320;
+    border-top: 1.2px solid #f9a320;
+    border-right: 1.2px solid #f9a320;
 }
 
 .selection select:hover {
-    color: #ffd700;
-    background: url(images/select_hover.png) no-repeat right;
+    color: #114a82;
+    background: url(images/select-h.png) no-repeat 96%;
     -webkit-transition: .5s ease;
     transition: .5s ease;
+     color:#f9a320;
+      border-bottom: 1.2px solid #f9a320;
+    border-left: 1.2px solid #f9a320;
+    border-top: 1.2px solid #f9a320;
+    border-right: 1.2px solid #f9a320;
 }
 
 .search-button {
     width: 186px;
-    color: #25406a;
-    font-family: "Century Gothic";
+    color:#114a82;
+    font-family: "ProximaNova";
     font-size: 15px;
     font-weight: 700;
     margin-top: 17.5px;
@@ -1630,34 +1642,24 @@ opacity: .1;}}
     .search-button a {
         padding: 14px 68px 13px 68px;
         text-decoration: none;
-        border: 1px solid #fff;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+        border: 1.2px solid #114a82;
+        color: #114a82;
+        font-family: "ProximaNova";
         font-size: 18px;
         font-weight: 700;
         background: transparent;
         cursor: pointer;
     }
-
         .search-button a:hover {
-            background-image: -webkit-gradient(linear,left bottom,left top,from(#797f2b),color-stop(13.5%,#959958),color-stop(50%,#fff),color-stop(86.5%,#f9feb1),to(#f6fea3));
-            background-image: linear-gradient(to top,#797f2b 0%,#959958 13.5%,#fff 50%,#f9feb1 86.5%,#f6fea3 100%);
-            color: #25406a;
+            border: 1.2px solid #f9a320;
+            color: #f9a320;
             -webkit-transition: .5s ease;
             transition: .5s ease;
         }
 
 
-
-
-
-
-
-
-
 .products {
-    margin-left: 225px;
+    margin-left: 0;
     margin-top: 18px;
 }
 
@@ -1672,15 +1674,18 @@ opacity: .1;}}
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         position: relative;
-        width: 1100px;
+        width: 1200px;
         color: #f00;
+
+        justify-content: space-evenly;
+        align-items: left;
     }
 
         .products .prods li {
             margin-bottom: 50px;
 
             margin-left: 0px;
-            margin-right: 11px;
+            /*margin-right: 10px;*/
             border: 1px solid #e5e5f8;
             background-color: #fff;
 
@@ -1694,7 +1699,7 @@ opacity: .1;}}
 
         .products .prods .redimg {
             position: absolute;
-            z-index: 10000;
+            z-index: 99999999999;
             margin-left: 224px;
             margin-top: 100px;
         }
@@ -1788,27 +1793,33 @@ opacity: .1;}}
 
 
 
-    .products #more {
-        padding: 11px 443px 10px 443px;
-        border-radius: 10px;
-        background: none;
-        border: 1px solid #fff;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-        font-size: 18px;
-        font-weight: 700;
+    .products #more {    
+        display: block;
+        width: 390px;
+        padding: 6px 0px 6px 0px;
         text-decoration: none;
-    }
-
-        .products #more:hover {
-            background-image: -webkit-gradient(linear,left bottom,left top,from(#797f2b),color-stop(13.5%,#959958),color-stop(50%,#fff),color-stop(86.5%,#f9feb1),to(#f6fea3));
-            background-image: linear-gradient(to top,#797f2b 0%,#959958 13.5%,#fff 50%,#f9feb1 86.5%,#f6fea3 100%);
-            color: #213b64;
-            -webkit-transition: .5s ease;
-            transition: .5s ease;
-        }
-
+        color: #ffffff;
+        font-family: "ProximaNova";
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 34px;
+        text-transform: uppercase;
+        text-align: center;
+        background-color: #114a82;
+        letter-spacing: 1.5px;
+        right: 0;
+        margin-right: 0;
+        margin-left: 802px;
+}
+       .products #more:hover {
+         -webkit-transition: .8s ease;
+         transition: .8s ease;
+         background-color: #f9a320;
+         color: #114a82;
+}
+.sorting {
+    margin-top:20px;
+}
 
 
 
@@ -1832,17 +1843,17 @@ opacity: .1;}}
 
 .seotext {
     width: 1065px;
-    margin-left: 225px;
+    margin-left: 0px;
+    margin:auto;
     margin-top: 82px;
-    margin-bottom: 96px;
+    margin-bottom: 137px;
     opacity: .7;
-    text-align: center;
+    text-align: left;
 }
 
     .seotext p {
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+          color: #114a82;
+    font-family: "ProximaNova";
         font-size: 18px;
         font-weight: 600;
         line-height: 20px;
@@ -1857,9 +1868,8 @@ opacity: .1;}}
 }
 
     .seotext2 p {
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+            color: #114a82;
+    font-family: "ProximaNova";
         font-size: 18px;
         font-weight: 600;
         line-height: 20px;
@@ -1873,9 +1883,8 @@ opacity: .1;}}
     margin-top: 29px;
     border: 1px solid #fff;
     opacity: .8;
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+        color: #114a82;
+    font-family: "ProximaNova";
     font-size: 24px;
     font-weight: 700;
 }
@@ -1888,9 +1897,8 @@ opacity: .1;}}
 .table_of_prodapart table {
     width: 455px;
     margin-left: 225px;
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+        color: #114a82;
+    font-family: "ProximaNova";
     font-size: 18px;
     font-weight: 600;
     line-height: 20px;
@@ -2008,14 +2016,15 @@ opacity: .1;}}
     -ms-flex-direction: row;
     flex-direction: row;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
     width: 1065px;
     margin-top: 54px;
-    margin-left: 225px;
-    margin-bottom: 5px;
+    margin-left: 0px;
+    margin: auto;
+    /* margin-bottom: 5px; */
 }
 
 .sorting a {
@@ -2025,21 +2034,25 @@ opacity: .1;}}
     background: transparent;
     margin-top: 4px;
     margin-left: 2px;
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    
+
+
+        color: #114a82;
+    font-family: "ProximaNova";
+    font-weight: 700;
+    border-bottom: 1.2px solid #114a82;
+    border-left: 1.2px solid #114a82;
+    border-top: 1.2px solid #114a82;
+    border-right: 1.2px solid #114a82;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
-    border: 1px solid #fff;
     text-align: center;
 }
 
     .sorting a:hover {
-        display: block;
-        background-image: -webkit-gradient(linear,left bottom,left top,from(#797f2b),color-stop(13.5%,#959958),color-stop(50%,#fff),color-stop(86.5%,#f9feb1),to(#f6fea3));
-        background-image: linear-gradient(to top,#797f2b 0%,#959958 13.5%,#fff 50%,#f9feb1 86.5%,#f6fea3 100%);
-        color: #25406a;
+           border: 1.2px solid #f9a320;
+                color: #f9a320;
         -webkit-transition: .5s ease;
         transition: .5s ease;
     }
@@ -2986,9 +2999,8 @@ a[href^=tel] {
 }
 
 .seotext div {
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+       color: #114a82;
+    font-family: "ProximaNova";
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
@@ -2997,9 +3009,8 @@ a[href^=tel] {
 }
 
 .seotext a#more {
-    color: #ffd700;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    color: #f9a320;
+    font-family: "ProximaNova";
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
