--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -1,5 +1,3 @@
-/* http://www.menucool.com */
-
 #sliderFrame, #sliderFrame div {
     box-sizing: content-box;
 }
@@ -38,7 +36,7 @@
 
 /* ------ built-in navigation bullets wrapper ------*/
 #slider .navBulletsWrapper  {
-    top:555px;
+    top:570px;
     text-align:center;
     background:none;
     position:relative;
@@ -63,6 +61,11 @@
 #slider img, #slider>b, #slider a>b {
     position:absolute; border:none; display:none;
 }
+#slider img {
+    width:100%!important;
+    object-fit:cover!important;
+    height:600px!important;
+}
 
 #slider .sliderInner {
     overflow:hidden;
@@ -76,3 +79,4 @@
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
+
