--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -52,6 +52,11 @@
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                             </div>
+                            <div class="shared_icons">
+                                <a href="" class="fb" target="_blank"></a>
+                                <a href="" class="vk" target="_blank"></a>
+                                <a href="" class="tw" target="_blank"></a>
+                            </div>
                         </a>
                     </li>
                 }
