--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -186,15 +186,17 @@
             <a class="lazyImage" href="~/Content/images/image-slider-2.jpg"><img src="~/Content/images/image-slider-2.jpg"></a>
             <a class="lazyImage" href="~/Content/images/image-slider-3.jpg"><img src="~/Content/images/image-slider-3.jpg"></a>
             <a class="lazyImage" href="~/Content/images/image-slider-5.jpg"><img src="~/Content/images/image-slider-5.jpg"></a>
-            
-        </div>
+
+           </div>
     </div>
 
 
 
+   <!-- <a class="lazyImage" href="~/Content/images/image-slider-2.jpg"><img src="~/Content/images/image-slider-2.jpg"></a>
+    <a class="lazyImage" href="~/Content/images/image-slider-3.jpg"><img src="~/Content/images/image-slider-3.jpg"></a>
+    <a class="lazyImage" href="~/Content/images/image-slider-5.jpg"><img src="~/Content/images/image-slider-5.jpg"></a>
 
-
-
+       -->
 
 
 
